style.css
@font-face{
  font-family: friz;
  src:url(FRQ55.otf);
}
*{
  outline:none;
}
*::selection{
background-color: transparent;
}
body{
  font-size:100%;
  margin:0;
  overflow-x:hidden!important;
  font-family: 'friz';
  height: 100vh;
  width: 100%;
}
.navbar{
  background: black;
  opacity: .7;
  height: 7vh;
  font-size: 1.2rem;
  color: rgb(221, 243, 124);
  display: flex;
}
.difficultybutton, .resetbutton{
  width: 100%;
}
button{
  color: inherit;
  font-size: inherit;
  background: none;
  border: none;
  font-family: inherit;
  height: 100%;
}
.modal,
#myModal{
  z-index: 4000;
  height: 40%;
  width: 80%;
  background-image: url(Images/Modalbackground.png);
  background-size: cover;
  background-repeat: no-repeat;
}
.victory,
#victory{
  background-image: url(Images/Win.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 40%;
  width: 80%;
}
.playagain{
  background-image: url(Images/Playagain.png);
  background-size: contain;
  width: 40%;
  height: 20%;
  background-repeat: no-repeat;
  vertical-align: middle;
}
.modal-content p{
  text-align: center;
  color: green;
}
.modal-content{
  height: 100%;
  width: 100%;
}

.buttoncontainer{
width: 100%;
height: 100%;
display: flex;
justify-content: space-evenly;
margin-top: 0;
}
.introbutton{
margin: 0;
height: 100%;
width: 100%;
background-color: rgba(0, 0, 0, 0.192);
font-weight: bold;
font-size: 1.4rem;
opacity: .6;
cursor: pointer;
}
.introbutton:hover{
background: linear-gradient(to bottom, rgba(0, 0, 0, 0.116), rgba(255, 255, 255, 0.363), rgba(0, 0, 0, 0.116));
text-align: center;
}
#playagain{
    color: white;
    margin: auto auto 0;
    height: 7%;
    width: 20%;
    width: 23%;
    order: none;
    background-color: rgb(184, 14, 14);
    border-top: 4px solid rgb(204, 105, 105);
    border-bottom: 4px solid rgb(90, 7, 7);
    border-right: 4px solid red;
    border-left: 4px solid red;
    text-align: center;
    font-weight: bold;
    font-size: .9rem;
}
li .difficulty:hover{
text-align: left;
cursor: pointer;
background: none;
}
li .reset:hover{
cursor: pointer;
text-align: left;
background: none;
}
.restcontainer{
  display:flex;
  height:55vh;
  width: 100%;
}
aside{
  width:25%;
  border-radius:8px;
  height:75vh;
  display:flex;
  flex-wrap:wrap;
}
.paradiv{
  height:10vh;
  width:100%;
  border: 4px solid white;
  border-radius:8px;
}
.smalltext{
  color: black!important;
  font-size: .7em;
}
.statbox{
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-around;
}

.carddiv{
  position:relative;
  height: 36%;
  width: 12%;
  border-radius:15px;
  margin: 0;
  float:left;
  opacity: .9;
}

.main{
  cursor: pointer;
  width:60%;
  display: flex;
  flex-wrap: wrap;
  height:100%;
  border-radius:8px;
  vertical-align:middle;
  margin:5% auto auto auto;
  justify-content: space-around;
}

/* iPad Portrait */
@media only screen and (max-width: 1100px) and (min-width: 420px) and (min-height: 420px){
  .statbox {
    font-size: 1.2em;
  }
  .main{
    width: 100%!important;
  }
  .carddiv{
    width: 15%;
    height: 27%;
  }
  .restcontainer{
    margin: 0;
    height: 80vh;
  }
  li{
    font-size: 1em;
  }
  .difficultydropdown{
    z-index: 1000;
  }
  .navbar{
    height: 7vh;
  }
}
/* iPad Landscape */
@media only screen and (max-height: 1400px) and (min-width: 1000px) and (max-width: 1300px){
  .statbox {
    font-size: 1.2em;
  }
  .main{
    width: 100%!important;
  }
  .carddiv{
    width: 12%;
    height: 32%;
  }
  .restcontainer{
    margin: 0;
    width: 100%;
    height: 80vh;
  }
  li{
    font-size: 1em;
  }
  .difficultydropdown{
    z-index: 1000;
  }
  .navbar{
    height: 9vh;
  }
}

/* iPhone Portrait*/
@media only screen and (max-width: 450px) {
  .statbox {
    font-size: .6em;
  }
  .main{
    margin-top: 20%;
    width: 100%!important;
    height: 77%;
  }
  .carddiv{
    width: 25%;
    height: 26%;
  }
}
/* iPhone Landscape */
@media only screen and (max-height: 400px) {
  .statbox {
    font-size: 1em;
  }
  .main{
    width: 100%!important;
  }
  .carddiv{
    width: 12%;
    height: 27%;
  }
  .restcontainer{
    margin: 0;
    height: 80vh;
  }
  li{
    font-size: 1em;
  }
  .difficultydropdown{
    z-index: 1000;
  }
  .navbar{
    height: 14vh;
  }
}
.ulreset:hover, .uldifficulty:hover{
background: black;
text-align: center;
}
.box{
  padding: 0;
  width: 100%;
}
.ulbox{
  cursor: default;
  width: 20%;
  display: flex;
  justify-content: space-evenly;
  margin: 0;
}
ul{
  list-style: none;
  vertical-align: middle;
  text-align: center;
  height: 100%;
  width: auto;
}
.difficulty{
  position: relative;
  top: 20%;
  height: 8%;
  vertical-align: middle;
  text-align: left;
  font-size: .9em;
}
.difficultydropdown{
  margin-top: 20%;
  background-color: black;
}
.resetdropdown{
  width: 100%;
  margin-top: 20%;
  background-color: black;
}
.reset{
  width: 100%;
  position: relative;
  top: 10%;
  height: 8%;
  vertical-align: middle;
  text-align: left;
  font-size: .9em;
}

li{
  text-align: center;
  background-color: transparent!important;
}
.hover:hover{
  transition: transform 0.8s;
  transform-style: preserve-3d;
  transform: scale(1.3);
  z-index: 400;
}
.carddiv :checked{
  transform: rotateY(180deg);
  backface-visibility: hidden;
}
.cardfront{
  opacity: 1;
}
.cardfrontillaoi{
  background-image:url(Images/Illaoicard.png);
}
.cardfrontdarius{
  background-image:url(Images/Dariuscard.png);
}
.cardfrontswain{
  background-image:url(Images/Swaincard.png);
}
.cardfront,
.cardback{
  border-radius:15px;
  height: 100%;
  width: 100%;
  background-size:contain;
  background-repeat:no-repeat;
  background-position:center;
  position:absolute;
}
.disableclick{

}
.card{
  border-radius: 15px;
}
.hidden{
  display:none;
}
.darius{
  background-image: url(Images/Darius.png);
}
.heimerdinger{
  background-image: url(Images/Heimerdinger.png);
}
.illaoi{
  background-image: url(Images/Illaoi.png);
}
.kayn{
  background-image: url(Images/Kayn.png);
}
.malphite{
  background-image: url(Images/Malphite.png);
}
.mordekaiser{
  background-image: url(Images/Mordekaiser.png);
}
.nasus{
  background-image: url(Images/Nasus.png);
}
.riven{
  background-image: url(Images/Riven.png);
}
.ziggs{
  background-image:url(Images/Ziggs.png);
}
.veigar{
  background-image:url(Images/Veigar.png);
}
.vi{
  background-image:url(Images/Vi.png);
}
.tryndamere{
  background-image:url(Images/Tryndamere.png);
}
.hide{
  visibility: hidden;
}
.masteryi{
  background-image:url(Images/MasterYi.png);
}
.shyvana{
  background-image:url(Images/Shyvana.png);
}
.twitch{
  background-image:url(Images/Twitch.png);
}
.annie{
  background-image:url(Images/Annie.png);
}
.vayne{
  background-image:url(Images/Vayne.png);
}
.lux{
  background-image:url(Images/Lux.png);
}
.teemo{
  background-image:url(Images/Teemo.png);
}
.caitlyn{
  background-image:url(Images/Caitlyn.png);
}
.swainbackground{
  background-image:url(Images/swainbackground.jpg);
}
.illaoibackground{
  background-image:url(Images/illaoibackground.jpg);
}
.dariusbackground{
  background-image:url(Images/dariusbackground.jpg);
}
.swainbackground, .illaoibackground, .dariusbackground{
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}
.z-high{
z-index:1000;
}
.z-low{
z-index:-1000;
}

